# geo-rota

./: .gitignore  README.md  _tmp_router_update.py  pyproject.toml  regras_negocio.md
frontend/geo-rota/: build_log.txt  index.html  package-lock.json  package.json
frontend/geo-rota/src/: App.tsx  main.tsx
frontend/geo-rota/src/api/: apiClient.tsx  auth.ts
frontend/geo-rota/src/components/: FullPageSpinner.tsx  NotificationContainer.tsx  ProtectedRoute.tsx  TablePagination.tsx
frontend/geo-rota/src/context/: AuthContext.tsx  NotificationContext.tsx
frontend/geo-rota/src/hooks/: useAuth.ts  useNotification.ts  useRoutePolyline.ts
frontend/geo-rota/src/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/geo-rota/src/pages/: Home.tsx  Login.tsx  Rotas.jsx
frontend/geo-rota/src/styles/: layout.css  sidebar.css
geo_rota/: main.py
geo_rota/core/: auth.py  config.py  database.py  security.py
geo_rota/models/: __init__.py  cache.py  company.py  destination.py  employee.py  employee_route_group.py  employee_unavailability.py  enums.py  model_base.py  route.py  route_group.py  user.py  vehicle.py  vehicle_availability.py  work_schedule.py
geo_rota/routers/: __init__.py  auth_router.py  destino_router.py  empresa_router.py  funcionario_router.py  grupo_rota_router.py  rota_router.py  usuario_router.py  veiculo_router.py
geo_rota/schemas/: __init__.py  company.py  destination.py  employee.py  route.py  route_group.py  user.py  vehicle.py
geo_rota/services/: __init__.py  destino_service.py  empresa_service.py  funcionario_service.py  grupo_rota_service.py  rota_service.py  roteirizacao_service.py  user_service.py  veiculo_service.py
geo_rota/utils/: __init__.py  geocode.py  osrm.py
scripts/: gerar_coord.py  seed_db.py  seed_rota_2.py
(+36 files in other folders)
