[tool.poetry]
name = "geo-rota"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <lucasalves.comp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.119.0,<0.120.0"
uvicorn = {version = ">=0.37.0,<0.38.0", extras = ["standard"]}
pydantic = {version = ">=2.12.0,<3.0.0", extras = ["email"]}
geopy = ">=2.4.1,<3.0.0"
ortools = ">=9.14.6206,<10.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
python-jose = {version = ">=3.5.0,<4.0.0", extras = ["cryptography"]}
passlib = ">=1.7.4,<2.0.0"
python-multipart = ">=0.0.6,<1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"
black = "^25.9.0"
isort = "^7.0.0"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = 'uvicorn geo_rota.main:app --reload'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
